2006-12-12 Mike Johnson <mrjohnson0@users.sourceforge.net>
	* pyembed.c: check if the file is a pyc/pyo file and run code directly
	* Jep.java: fix constructor's sys.path manipulation for Windows
	* pyembed.c: add invoke methods
	* Jep.java: add invoke()
	* util.c: add convert_jobject to unbox java types to python's
	* Util.java: add
	* PyClass.java: add
	* pyembed.c: store Jep class instance to JepThread
	* ClassList.java: return empty array for packages that have no classes
	* invocationhandler.c: add
	* Proxy.java: add
	* InvocationHandler.java: add
	* pyembed.c: fix jimport so A.B imports like Python expects
	* Run.java: add a -s switch to run swing apps (basically, don't close jep)
	* console.py: pass argv to interactive prompt
	* ClassList.java: fix error importing classes with no package name.
	
2006-10-17 Mike Johnson <mrjohnson0@users.sourceforge.net>
	* makefiles: don't compile javax.script support if not available.
	
2006-10-2 Mike Johnson <mrjohnson0@users.sourceforge.net>
	* makefiles: fixes for src/

2006-4-24 Mike Johnson <mrjohnson0@users.sourceforge.net>
	* pyembed.c: convert types (and box) on return from getValue
	* pyembed.c: don't set parameters on jep module, set them in globals dict
	* Jep.java: handle java.lang.Class objects specially
	* jep.c: handle java.lang.Class objects specially
	* pyjmethod.c: handle java.lang.Class objects specially
	* pyjfield.c: handle java.lang.Class objects specially
	* util.c: handle java.lang.Class objects specially
	* pyembed.c: handle java.lang.Class objects specially
	* python/PyObject.java: added
	* python/PyModule.java: added
	* JepScriptEngine.java: added
	* JepScriptEngineFactory.java: added
	* pyembed.c: added printTrace() python function
	* windows/: added vs2003 project file
	* windows/jcompile.sh: added cygwin script to compile java code
	* pyembed.c: fixed decref of NULL reported by jkiter
	* makefilecrap: add -framework JavaVM so the mac can link against libjvm
	* makefilecrap: updated