@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(makejar.sh)
 dnl Every other copy of the package version number gets its value from here
-AM_INIT_AUTOMAKE(jep, 2.1)
+AM_INIT_AUTOMAKE(jep, 2.2)
 
 dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
 AM_CONFIG_HEADER(config.h)
